feat: working auto map-update